--- a/src/styles/components/blog/_related-articles.scss
+++ b/src/styles/components/blog/_related-articles.scss
@@ -35,5 +35,6 @@
   @include tab {
     flex-direction: row;
     justify-content: space-between;
+    align-items: flex-end;
   }
 }
